git subrepo clone --force git://github.com/dnmfarrell/Pod-Perl5.git dnmfarrell/Pod-Perl5
subrepo:
  subdir:   "dnmfarrell/Pod-Perl5"
  merged:   "b7bda81"
upstream:
  origin:   "git://github.com/dnmfarrell/Pod-Perl5.git"
  branch:   "master"
  commit:   "b7bda81"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/dnmfarrell/Pod-Perl5/README.pod
+++ b/dnmfarrell/Pod-Perl5/README.pod
@@ -2,11 +2,11 @@
 
 =head1 NAME
 
-Pod::Perl5 - a parser for Perl 5 pod
+Pod::Perl5 - a parser for Perl 5 pod written in Perl 6 with HTML and Markdown serialization
 
 =head1 VERSION
 
-0.13
+0.18
 
 =head1 DESCRIPTION
 
