git subrepo clone --force git://github.com/zoffixznet/perl6-Pastebin-Shadowcat.git zoffixznet/perl6-Pastebin-Shadowcat
subrepo:
  subdir:   "zoffixznet/perl6-Pastebin-Shadowcat"
  merged:   "fa706cf"
upstream:
  origin:   "git://github.com/zoffixznet/perl6-Pastebin-Shadowcat.git"
  branch:   "master"
  commit:   "fa706cf"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/zoffixznet/perl6-Pastebin-Shadowcat/Changes
+++ b/zoffixznet/perl6-Pastebin-Shadowcat/Changes
@@ -1,5 +1,8 @@
 Revision history for Pastebin-Shadowcat
 
+2.001001  2015-10-11
+  - Use OO instead of plain subs to be compat with App::Nopaste
+
 1.001002  2015-09-29
   - Fix failures when fetching pastes with more than one line
   - Properly "fail()" on errors
