--- a/zoffixznet/perl6-Pastebin-Shadowcat/README.pod
+++ b/zoffixznet/perl6-Pastebin-Shadowcat/README.pod
@@ -1,5 +1,7 @@
 =encoding utf8
 
+=for HTML <a href="https://travis-ci.org/zoffixznet/perl6-Pastebin-Shadowcat"><img src="https://travis-ci.org/zoffixznet/perl6-Pastebin-Shadowcat.svg?branch=master"></a>
+
 =head1 NAME
 
 Pastebin::Shadowcat - Perl 6 interface to http://fpaste.scsys.co.uk/
@@ -8,12 +10,13 @@ Pastebin::Shadowcat - Perl 6 interface to http://fpaste.scsys.co.uk/
 
     use Pastebin::Shadowcat;
 
+    my $p = Pastebin::Shadowcat.new;
     say "Pasting test content:";
-    my $paste_url = paste('<pre>test paste1</pre>', 'My optional summary');
+    my $paste_url = $p.paste('<pre>test paste1</pre>', 'My optional summary');
     say "Paste is located at $paste_url";
 
     say "Retrieiving paste content:";
-    my ( $content, $summary ) = get_paste('http://fpaste.scsys.co.uk/471157');
+    my ( $content, $summary ) = $p.fetch('http://fpaste.scsys.co.uk/471157');
     say "Summary: $summary";
     say "Content: $content";
 
@@ -22,23 +25,28 @@ Pastebin::Shadowcat - Perl 6 interface to http://fpaste.scsys.co.uk/
 This module allows to paste to L<http://fpaste.scsys.co.uk/> pastebin
 as well as retrieve content from existing pastes.
 
-=head1 EXPORTED SUBROUTINES
+=head1 METHODS
+
+=head2 C<new>
+
+    my $p = Pastebin::Shadowcat.new;
+
+Creates new C<Pastebin::Shadowcat> object.
 
 =head2 C<paste>
 
-    my $paste_url = paste('Paste content');
-
-    my $paste_url = paste('Paste content', 'Optional summary');
+    my $paste_url = $p.paste('Paste content');
+    my $paste_url = $p.paste('Paste content', 'Optional summary');
 
 B<Returns> URL to the created paste (e.g. L<http://fpaste.scsys.co.uk/471157>).
 C<fail>s on error. B<Takes> one mandatory and one optional arguments:
 the content to paste and optional sumary.
 
-=head2 C<get_paste>
+=head2 C<fetch>
 
-    my ( $content, $summary ) = get_paste('http://fpaste.scsys.co.uk/471157');
+    my ( $content, $summary ) = $p.fetch('http://fpaste.scsys.co.uk/471157');
 
-    my ( $content, $summary ) = get_paste('471157');
+    my ( $content, $summary ) = $p.fetch('471157');
 
 B<Returns> a two-item list: paste content and paste summary.
 C<fail>s on error. B<Takes> one mandatory argument: a full URL or just the
