git subrepo clone --force git://github.com/p6-pdf/perl6-Font-AFM.git p6-pdf/perl6-Font-AFM
subrepo:
  subdir:   "p6-pdf/perl6-Font-AFM"
  merged:   "622a4cc"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-Font-AFM.git"
  branch:   "master"
  commit:   "622a4cc"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/p6-pdf/perl6-Font-AFM/Changes
+++ b/p6-pdf/perl6-Font-AFM/Changes
@@ -1,3 +1,8 @@
+   Release 1.23.1
+   Replaced dynamic Pand Build.pm with semi-static make_metrics.pl.
+   - generated AFM foiles should seldom change. build-time generation of modules
+     was overkill. generated sources are now checked in, and can be occasionally
+     regenerated, when needed.
    Release 1.23
    Making things less ISO-Latin1 centric
    - inverted @ISOLatin1Encoding => %ISOLatin1Encoding
