git subrepo clone --force git://github.com/tadzik/perl6-Term-ANSIColor.git tadzik/perl6-Term-ANSIColor
subrepo:
  subdir:   "tadzik/perl6-Term-ANSIColor"
  merged:   "793f83e"
upstream:
  origin:   "git://github.com/tadzik/perl6-Term-ANSIColor.git"
  branch:   "master"
  commit:   "793f83e"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/tadzik/perl6-Term-ANSIColor/README
+++ b/tadzik/perl6-Term-ANSIColor/README
@@ -1,2 +1,4 @@
+This module is **deprecated**. Please use [Terminal::ANSIColor](https://github.com/tadzik/Terminal-ANSIColor/) from now on.
+
 This is a Term::ANSIColor module for Perl 6.
 For example usage, see example.pl or SYNOPSIS in the Pod.
