--- a/perl6/DBIish/README.pod
+++ b/perl6/DBIish/README.pod
@@ -2,6 +2,8 @@
 
 DBIish - a simple database interface for Rakudo Perl 6
 
+=for HTML <a href="https://travis-ci.org/perl6/DBIish"><img src="https://travis-ci.org/perl6/DBIish.svg?branch=master"></a>
+
 =head1 SYNOPSIS
 
     use v6;
@@ -10,7 +12,7 @@ DBIish - a simple database interface for Rakudo Perl 6
     my $dbh = DBIish.connect("SQLite", :database<example-db.sqlite3>, :RaiseError);
 
     my $sth = $dbh.do(q:to/STATEMENT/);
-        DROP TABLE nom
+        DROP TABLE IF EXISTS nom
         STATEMENT
 
     $sth = $dbh.do(q:to/STATEMENT/);
@@ -61,6 +63,10 @@ a subset of the functionality).
 It is based on Martin Berends' MiniDBI project, but unlike MiniDBI, DBDish
 aims to provide an interface that takes advantage of Perl 6 idioms
 
+Unlike Perl 5's DBI, it provides a C<fetchrow_typedhash> and C<fetchall_typedhash> 
+methods on DBD::StatementHandle that returns a hash with Perl6 typed value by oposition
+to everything in Str (implemented only in Pg for now).
+
 =head1 INSTALLATION
 
     $ panda install DBIish
@@ -68,7 +74,7 @@ aims to provide an interface that takes advantage of Perl 6 idioms
 =head1 DBDish CLASSES
 
 Until there is a benefit in doing it otherwise, the DBDish drivers stay
-and install together with the main DBIish.pm6 in a single project. 
+and install together with the main DBIish.pm6 in a single project.
 
 Currently the following backends are supported
 
@@ -78,7 +84,7 @@ Supports basic CRUD operations and prepared statements with placeholders
 
     my $dbh = DBIish.connect('Pg', :host<db01.yourdomain.com>, :port(5432),
             :database<blerg>, :user<myuser>, :$password);
-
+            
 =head2 SQLite
 
 Supports basic CRUD operations and prepared statements with placeholders
